<resources>
    <string name="app_name">RTA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_main">REGISTO\nDA\nTENSÃO\nARTERIAL</string>
    <string name="guide">Guia</string>
    <string name="start_app">Carregue no ecrã para\niniciar a aplicação</string>
    <string name="menu_guide">Aqui pode escolher se pretende adicionar uma nova entrada ou sair da aplicação. Se quiser ver os seus dados ou definir o alarme, veja o botão dos outros.</string>
    <string name="menu_other_btn">outros</string>
    <string name="menu_exit_btn">sair</string>
    <string name="menu_new_btn">novo</string>
    <string name="menu_title">MENU</string>
</resources>