<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:orientation="vertical"
    android:id="@+id/main_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:text="@string/title_main"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="@dimen/title_main"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_app"
        android:textSize="@dimen/txt_guide"
        android:layout_gravity="center"
        android:textAlignment="center"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/main_efab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/extended_fab_margin"
        android:contentDescription="@string/guide"
        android:text="@string/guide"
        android:textSize="@dimen/txt_guide"
        android:layout_gravity="bottom|end"
        app:icon="@drawable/ic_outline_info"
        />

</LinearLayout>